--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -1,4 +1,4 @@
-TITLE=Portal Notas
+TITLE=Gerenciador de Tarefas
 INPUT_PLACEHOLDER=O que precisa ser feito ?
 SEARCH_PLACEHOLDER=O que precisa ser feito ?
 CLEAR_COMPLETED=Clear completed
