--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -9,3 +9,7 @@ ITEMS_CONTAINING=Einträge mit "{0}"
 LABEL_ALL=Alle
 LABEL_ACTIVE=Aktiv
 LABEL_COMPLETED=Erledigt
+detailPageTitle=Aufgabendetails
+description=Beschreibung
+priority=Priorität
+dueDate=Fälligkeitsdatum
