deploy: 074f363d4fd6490ccbb0d2ce16ab18e5926c8c3d

--- a/i18n/i18n_de.properties
+++ b/i18n/i18n_de.properties
@@ -9,3 +9,7 @@ ITEMS_CONTAINING=Eintr\u00e4ge mit "{0}"
 LABEL_ALL=Alle
 LABEL_ACTIVE=Aktiv
 LABEL_COMPLETED=Erledigt
+detailPageTitle=Aufgabendetails
+description=Beschreibung
+priority=Priorit\u00e4t
+dueDate=F\u00e4lligkeitsdatum
