--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -10,3 +10,7 @@ ITEMS_CONTAINING=Items containing "{0}"
 LABEL_ALL=All
 LABEL_ACTIVE=Active
 LABEL_COMPLETED=Completed
+detailPageTitle=Task Details
+description=Description
+priority=Priority
+dueDate=Due Date
