--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -1,12 +1,16 @@
-TITLE=Gerenciador de Tarefas
-INPUT_PLACEHOLDER=O que precisa ser feito ?
-SEARCH_PLACEHOLDER=O que precisa ser feito ?
+TITLE=Task Manager
+INPUT_PLACEHOLDER=What needs to be done?
+SEARCH_PLACEHOLDER=What needs to be done?
 CLEAR_COMPLETED=Clear completed
 ACTIVE_ITEMS=Active items
 ACTIVE_ITEMS_CONTAINING=Active items containing "{0}"
 COMPLETED_ITEMS=Completed items
 COMPLETED_ITEMS_CONTAINING=Completed items containing "{0}"
 ITEMS_CONTAINING=Items containing "{0}"
-LABEL_ALL=Todos
-LABEL_ACTIVE=Abertos
-LABEL_COMPLETED=Concluidos "{0}"
+LABEL_ALL=All
+LABEL_ACTIVE=Active
+LABEL_COMPLETED=Completed
+detailPageTitle=Task Details
+description=Description
+priority=Priority
+dueDate=Due Date
